[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "recongraph"
version = "0.0.1"
authors = [
  { name="Muhammad Nur Yasir Utomo"},
]
description = "Reconstruction of Forensic Timelines Using Graph Theory"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "PyYAML",
    "networkx",
    "pandas",
    "lxml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
recongraph = "recongraph.recongraph:main"

[project.urls]
"Homepage" = "https://github.com/forensic-timeline/recongraph"

[tool.setuptools]
packages = ["recongraph"]
